--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
+    },
+     "ConnectionStrings": {
+        "WebApiDatabase": "Data Source=DESKTOP-0E04N90\\SQLEXPRESS; Initial Catalog=dotnet-6-crud-api; Integrated Security=true"
     }
 }
